Locks node version to 16.19.1

--- a/extensions/tokengate-src/package.json
+++ b/extensions/tokengate-src/package.json
@@ -9,6 +9,9 @@
     "build": "vite build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": ">=14.13.1 <17.0.0"
+  },
   "dependencies": {
     "@shopify/connect-wallet": "^0.1.0",
     "@shopify/gate-context-client": "^0.1.0",
