--- a/extensions/tokengate-src/package.json
+++ b/extensions/tokengate-src/package.json
@@ -17,8 +17,8 @@
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^2.2.0",
-    "vite": "^3.2.3",
-    "vite-plugin-node-stdlib-browser": "^0.1.1"
+    "@vitejs/plugin-react": "3.1.0",
+    "vite": "^4.1.4",
+    "vite-plugin-node-polyfills": "^0.7.0"
   }
 }
