--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "deploy": "shopify app deploy"
   },
   "dependencies": {
-    "@shopify/app": "3.39.0",
-    "@shopify/cli": "3.39.0"
+    "@shopify/app": "^3.44.1",
+    "@shopify/cli": "^3.44.1"
   }
 }
