--- a/extensions/tokengating-function/Cargo.toml
+++ b/extensions/tokengating-function/Cargo.toml
@@ -2,6 +2,7 @@
 name = "tokengating-function"
 version = "1.0.0"
 edition = "2021"
+rust-version = "1.62"
 
 [dependencies]
 serde = { version = "1.0.13", features = ["derive"] }
@@ -10,8 +11,8 @@ serde_json = "1.0"
 sha2 = "0.9.8"
 hmac = "0.11.0"
 hex = "0.4.3"
-shopify_function = "0.2.4"
-graphql_client = "0.12.0"
+shopify_function = "0.2.5"
+graphql_client = "0.13.0"
 
 [profile.release]
 lto = true
