--- a/extensions/tokengate-src/package.json
+++ b/extensions/tokengate-src/package.json
@@ -7,14 +7,17 @@
   "license": "MIT",
   "scripts": {
     "build": "vite build",
+    "dev": "vite dev",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
-    "@shopify/connect-wallet": "^0.1.0",
-    "@shopify/gate-context-client": "^0.1.0",
-    "@shopify/tokengate": "^0.1.0",
+    "@shopify/connect-wallet": "^3.0.1",
+    "@shopify/gate-context-client": "^1.0.1",
+    "@shopify/tokengate": "^1.1.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "viem": "^1.3.0",
+    "wagmi": "^1.3.9"
   },
   "devDependencies": {
     "@vitejs/plugin-react": "3.1.0",
