--- a/.gitignore
+++ b/.gitignore
@@ -1,32 +1,14 @@
-# Environment Configuration
-.env
-.env.*
-
-# Dependency directory
 node_modules
 
-# Dependency locks
+/.cache
+/build
+/app/build
+/public/build/
+/app/public/build
+/prisma/dev.sqlite
+/prisma/dev.sqlite-journal
+database.sqlite
+
+.env
 package-lock.json
-
-# Test coverage directory
-coverage
-
-# Ignore Apple macOS Desktop Services Store
-.DS_Store
-
-# Logs
-logs
-*.log
-
-# ngrok tunnel file
-config/tunnel.pid
-
-# vite build output
-dist/
-
-# extensions build output
-extensions/*/build
-extensions/tokengate/assets
-
-# Node library SQLite database
-web/database.sqlite
+yarn.lock
